--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+/* Ensure popovers are above the menu */
+.menu.pane-relief-history-menu ~ .popover.hover-popover {
+    z-index: var(--layer-menu);
+}
+
 /* Give history counts a little breathing room, and match the title text size */
 .titlebar .history-counter { font-size: 12px; padding-left: 3px; padding-right: 3px;}
 
