--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,25 @@
 /* Ensure popovers are above the menu */
 .menu.pane-relief-history-menu ~ .popover.hover-popover {
-    z-index: var(--layer-menu);
-}
+  z-index: var(--layer-menu); }
 
 /* Give history counts a little breathing room, and match the title text size */
-.titlebar .history-counter { font-size: 12px; padding-left: 3px; padding-right: 3px;}
+.titlebar .history-counter {
+  font-size: 12px;
+  padding-left: 3px;
+  padding-right: 3px; }
 
 /* Make the button and text more visible when you can go in that direction */
 .titlebar-button.mod-back.mod-active:not(:hover),
-.titlebar-button.mod-forward.mod-active:not(:hover)
-{ opacity: 0.75; }
+.titlebar-button.mod-forward.mod-active:not(:hover) {
+  opacity: 0.75; }
+
+/* Maximizing */
+.workspace-split.mod-root.should-maximize .workspace-leaf:not(.is-maximized),
+.workspace-split.mod-root.should-maximize .workspace-split:not(.has-maximized),
+body > .popover.hover-popover .workspace-split.should-maximize .workspace-leaf:not(.is-maximized),
+body > .popover.hover-popover .workspace-split.should-maximize .workspace-split:not(.has-maximized) {
+  display: none; }
+
+.workspace-split.mod-root.should-maximize .workspace-leaf.is-maximized,
+body > .popover.hover-popover .workspace-split.should-maximize .workspace-leaf.is-maximized {
+  flex-basis: calc(100% - 4px); }
