--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,19 @@
+/*! /* @settings
+
+name: Pane Relief
+id: pane-relief
+settings:
+    -   id: pane-relief-pane-numbering
+        title: Number panes
+        description: Add pane numbers to each window
+        type: class-toggle
+
+    -   id: pane-relief-disable-counts
+        title: Disable history counts
+        descirption: Remove the forward/back counts on titlebar
+        type: class-toggle
+*/
+
 /* Ensure popovers are above the menu */
 .menu.pane-relief-history-menu ~ .popover.hover-popover {
     z-index: var(--layer-menu);
