--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,7 @@ settings:
 body > .popover.hover-popover .workspace-split.should-maximize
 {
     .workspace-leaf:not(.is-maximized),
+    .workspace-tabs:not(.has-maximized),
     .workspace-split:not(.has-maximized) {
       display: none;
     }
