Hide stacked pane headers when maximized

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,7 @@ body > .popover.hover-popover .workspace-split.should-maximize
     .workspace-leaf:not(.is-maximized),
     .workspace-tabs:not(.has-maximized),
     .workspace-tabs.has-maximized > .workspace-tab-header-container,
+    .workspace-tabs.has-maximized > .workspace-tab-container > .workspace-tab-header,
     .workspace-split:not(.has-maximized) {
       display: none;
     }
