Reworked docs and messages for 0.16 "tab" terminology

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,8 @@ name: Pane Relief
 id: pane-relief
 settings:
     -   id: pane-relief-pane-numbering
-        title: Number panes
-        description: Add pane numbers to each window
+        title: Number panes/tabs
+        description: Add tab/pane numbers to each window
         type: class-toggle
 
     -   id: pane-relief-disable-counts
