Support native per-tab history on Obsidian 0.16.3
Obsidian 0.16.3 implements a new per-tab history feature similar to Pane Relief's,
so this update integrates support for that feature such that Pane Relief's
enhanced history features still work, i.e.:

- History saved across restarts and workspace loads
- Enhanced history menus with hover preview, drag, and context menu operations
- Forward/back mouse buttons apply to the clicked tab/pane, even if inactive
- Optional page counts on history arrows
- Tooltips on the arrows show the page that will be navigated to

(That is, these features aren't in Obsidian core (yet?) so Pane Relief adds them
on top of the new native history.)

You don't need this update if you aren't using Obsidian 0.16.3 yet, but it
would be a good idea to install it *before* you relaunch for the Obsidian 0.16.3
upgrade.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ settings:
 
     -   id: pane-relief-disable-counts
         title: Disable history counts
-        description: Remove the forward/back counts on titlebar
+        description: Remove the forward/back counts on title bars
         type: class-toggle
 
     -   id: pr-sliding-panes-desktop-width
@@ -72,6 +72,10 @@ body > .popover.hover-popover .workspace-split.should-maximize
       flex-basis: calc(100% - 4px); // 4px is for scrollbar width
       .view-header {
         display: flex;
+        body.is-hidden-frameless:not(.is-fullscreen) & {
+          padding-left: var(--frame-left-space);
+          padding-right: var(--frame-right-space);
+        }
         .view-header-icon { display: inherit; }
       } // always show view header when maximized
     }
@@ -158,6 +162,7 @@ body.pane-relief-pane-numbering {
   {
       counter-reset: pane-number var(--pane-relief-label);
       content: counter(pane-number);
+      font-size: var(--font-ui-small, inherit);
   }
 
   /* Number panes in "koncham workspace" plugin's Center Panes view */
@@ -178,6 +183,16 @@ body.pane-relief-pane-numbering {
   { content: " "; }
   .workspace-leaf-content[data-type="center-panes"] .nav-file:nth-child(8) ~ .nav-file:last-child .nav-file-title-content::before
   { content: "9 " !important; }
+}
+
+/* 0.16.3 history counts */
+body:not(.pane-relief-disable-counts) .view-header-nav-buttons {
+  button:first-child::before {
+    content: var(--pane-relief-backward-count) "\00a0"; min-width: 1.5em; text-align: right;
+  }
+  button:last-child::after {
+    content: "\00a0" var(--pane-relief-forward-count); min-width: 1.5em;  text-align: left;
+  }
 }
 
 /* Disable history counts */
